Refactor SystemNotifyRespondentApplyFinalOrderTask (#1451)